--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,16 +1,19 @@
 ---
-title: "Data Visualizations"
+title: "Life Expectancy and GDP/Capita in the World"
 author: "Max Johansson"
 date: "Spring 2024"
 output: html_document
 ---
 
-In this project I showcase some of my visualization skills in R.
+# 1. About
+In this showcase R project I investigate the relationship between life expectancy and GDP per Capita. To do this, I use data from the gapminder package in R which contains data on these variables between 1952 to 2007. There are two main parts of the project: in the first part i visualize the relationship over time and by continent, and in the second part I investigate the relationship using a linear regression model. 
 
-# Data Manipulation
+# 2. Data Manipulation
  In the first chunk of code, I perform some data manipulation. 
  
 ```{r, message=FALSE, warning=FALSE}
+
+# Here I clear the environment
 rm(list = ls())
 
 # Packages 
@@ -40,35 +43,11 @@ df <- subset(df, continent != "Oceania")
 ```
 
 
-# Data Visualization
+# 3. Data Visualization
+In this section, I use various methods to visualize the relationship of interest. 
 
-It may be interesting to investigate any potential relationship between the GDP/ Capita and the life expectancy per contintent. 
-
-```{r}
-# Plotting the life expectancy against the gdp / cap 
-
-myplot <- ggplot(
-  data = df, 
-  aes(x = gdpPercap, 
-      y = lifeExp,
-      size = pop,
-      colour = country))+
-  geom_point(show.legend = FALSE)+
-  scale_colour_manual(values = gapminder::country_colors)+
-  facet_wrap(~continent)+
-  theme_bw()+
-  labs(title = "Life Expectancy against GDP/ Capita over time", 
-       subtitle = "year: {frame_time}",
-       x = "GDP/ Capita",
-       y = "Life Expectancy",
-       caption = "Based on Gapminder Data from 1952 and 2007.")+
-  gganimate::transition_time(year)+
-  ease_aes("linear")
-
-myplot
-```
-
-I also use the log versions of the variables
+## 3.1. Animated Plot 
+It may be interesting to investigate any potential relationship between the GDP/ Capita and the life expectancy per contintent using an animated plot. I consider the logged versions of the variables. 
 
 ```{r}
 
@@ -86,19 +65,21 @@ myplot2 <- ggplot(
   theme_bw()+
   labs(title = "Log Life Expectancy against Log GDP/ Capita over time", 
        subtitle = "year: {frame_time}",
-       x = "Log GDP/ Capita",
-       y = "Log Life Expectancy",
+       x = "Log GDP/ Capita ($)",
+       y = "Log Life Expectancy (Years)",
        caption = "Based on Gapminder Data from 1952 and 2007.")+
   gganimate::transition_time(year)+
   gganimate::ease_aes("linear")
 
 myplot2
 
-
 ```
 
+## 3.2. Density of Life Expectancy over Time - Total
 I want to find out if the trend has been with regard to life expectancy in the world. Note that the data excludes Oceania. It appears that the median life expectancy (the line separating the central quantiles) has increased over time. The density in 1952 are clearly different from the density of 2007, in 1952 the highest density is somewhere between 25 and 50 and the highest density is around 75. 
+
 ```{r, warning = FALSE, message=FALSE}
+
 # Plot Life Expectancy over Time
 ggplot(
   data = df, 
@@ -115,15 +96,17 @@ ggplot(
     title = "Life Expectancy over Time in the World",
     subtitle = "Based on Gapminder Data between 1952 and 2007",
     caption = "Note: Oceania Excluded")+
-  xlab("Life Expectancy")+
+  xlab("Life Expectancy (Years)")+
   ylab("Year")+
   theme_bw()
 
 ```
 
+## 3.3. Density of Life Expectancy over Time - Per Continent
 To add some nuance to the illustration, I visualize the life expectancy over time per continent. It appears to have existed differences between the continents according to the visual. For example, the life expectancy spread for Europe appears to have been less over time. 
 
 ```{r, warning = FALSE, message=FALSE}
+
 # Plot Life Expectancy over Time
 ggplot(
   data = df, 
@@ -140,12 +123,14 @@ ggplot(
     title = "Life Expectancy over Time by Contintent",
     subtitle = "Based on Gapminder Data between 1952 and 2007",
     caption = "Note: Oceania Excluded")+
-  xlab("Life Expectancy")+
+  xlab("Life Expectancy (Years)")+
   ylab("Year")+
   facet_wrap(~continent)+
   theme_bw()
+
 ```
 
+## 3.4. Density of log GDP/ Capita over Time - Per Continent
 Similarly, I think that the same type of illustration is well suited for displaying the evolution of GDP/ Capita per contintent. I use take the log of GDP/ Capita. 
 ```{r, warning = FALSE, message=FALSE}
 # Plot log gdp per capita ver Time
@@ -164,17 +149,17 @@ ggplot(
     title = "Log GDP/ Capita over Time by Contintent",
     subtitle = "Based on Gapminder Data between 1952 and 2007",
     caption = "Note: Oceania Excluded")+
-  xlab("Log GDP/ Cap")+
+  xlab("Log GDP/ Cap ($)")+
   ylab("Year")+
   facet_wrap(~continent)+
   theme_bw()
 ```
 
-# Modelling 
+# 4. Modelling 
 
 From the plots, one may suspect a relationship between GDP/ Capita and life expectancy. However, it also seemed that the life expectancy generally has increased over the years and evolved differently per continent. To investigate this, I fit a linear regression model to the data. I consider life expectancy as the outcome variable, and GDP/ Capita, the year and continent as the covariates. I fit one reduced model using only GDP/ Capita as the covariate, and another model that includes the other covariates as well. 
 
-## Fitted Model 
+## 4.1. Fitted Model 
 
 ```{r, warning = FALSE, message=FALSE}
 
@@ -192,7 +177,7 @@ stargazer::stargazer(model1, model2, type = "text")
 
 The $\beta$ coefficient estimate for GDP/ Capita is different between the models, perhaps indicating that by excluding the year and continent variables the model suffered from omitted variable bias. Looking at the adjusted $R^2$, it is greater for the second model, indicating that the covariates in the model to some degree explains the variation in the outcome variable life expectancy. Also, the residual standard error is smaller for the second model, indicating that the second model may be associated with less uncertainty compared to model 1. 
 
-## Residual Analyis 
+## 4.2. Residual Analyis 
 
 I investigate if the error terms are normally distributed. Looking at the QQ-plot, the sample quantiles deviates away some from the theoretical quantiles. So it appears that the residuals are atleast not perfectly normal. I also test this formally, and some the test results are associated with p-values close to or equal to 0, speaking against the null hypothesis that the observed quantiles are equal to the theoretical quantiles. However one test is associated with a p-value larger than 5%, in which case the null hypothesis is not rejected. So there is conflicting evidence. Lastly, investigate the correlation between the residuals of the model with normal residuals. The correlation is high, indicating at least some similarity to normally distributed residuals.
 
@@ -216,5 +201,5 @@ ggridges: https://cran.r-project.org/package=ggridges
 gganimate: https://cran.r-project.org/package=gganimate
 gifski: https://cran.r-project.org/package=gifski
 stargazer: https://cran.r-project.org/package=stargazer
-olsrr: 
+olsrr: https://cran.r-project.org/package=olsrr
 
